<resources>
    <string name="app_name">PhotoMe</string>
    <string name="hello_text_view">Open source photo editor.</string>

    <!--Toolbar-->
    <string name="menu_batch">batch</string>
    <string name="menu_info">info</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About Us</string>
    <string name="menu_back">Back</string>

    <!--bottom bar-->
    <string name="nav1_filter">Filter</string>
    <string name="nav1_photo_basic">Basic</string>
    <string name="nav1_photo_advance">Advance</string>
    <string name="nav1_save">Save</string>

    <!--basic photo editor tools-->
    <string name="nav2_basic_light_effect">Light</string>
    <string name="nav2_basic_curve">Curve</string>
    <string name="nav2_basic_tone">Tone</string>
    <string name="nav2_basic_crop">Crop</string>
    <string name="nav2_basic_rotate">Rotate</string>
    <string name="nav2_basic_details">Detail</string>
    <string name="nav2_basic_HSL">HSL</string>

    <!--advance pthoto editor tools-->
    <string name="nav2_adv_"></string>
    <string name="fn">FN</string>
    <string name="todo">TODO</string>

    <!--Setting-->
    <string name="pref_general_title">Exporting options</string>

    <string name="pref_general_category_jpeg_quality">Format and Quality</string>
    <string name="pref_general_title_jpeg_quality">Format and Quality</string>
    <string name="pref_general_key_jpeg_quality">format_quality</string>
    <string name="pref_general_summary_jpeg_quality">Default 95%%. \n\nChoose the format and quality
        rate that will be applied when exporting or sharing images. JPEG 100 will give the best JPEG
        image at the cost of increased file size.</string>

    <string name="pref_general_category_photo_size">Photo sizing</string>
    <string name="pref_general_key_photo_size">photo_sizing</string>
    <string name="pref_general_title_photo_size">Photo sizing</string>
    <string name="pref_general_summary_photo_size">Default do not resize.\n\nChoose the maximum
    photo for exporting and sharing. The sizes given refer to the long edge of the image and would
        only apply to images larger than the selected value. Smaller images will not be enlarged.</string>

    <string name="pref_general_category_photo_resolution">Resolution</string>
    <string name="pref_general_key_photo_resolution">resolution</string>
    <string name="pref_general_title_photo_resolution">Resolution</string>
    <string name="pref_general_summary_photo_resolution">Default do not change.\n\nImage resolution
        is the detail an image holds. The term applies to raster digital images, film images, and
        other types of images. Higher resolution means more image detail.</string>

    <!--about us-->
    <string name="logo">logo</string>

    <string name="activity_about_believe_title">BELIEVE</string>
    <string name="activity_about_believe_summary">
        Our belief is creativity at its essence requires the right tool.</string>

    <string name="activity_about_team_title">OUR TEAM</string>
    <string name="activity_about_team_summary">
        Our team is made up of the brightest and most
        dedicated designers, software engineers, and strategists in the world.</string>

    <string name="activity_about_position_title">CONTACT US</string>
    <string name="activity_about_position_summary">
        App Press is headquartered in Indianapolis,
        Indiana. Our offices are near downtown on South Meridian next to Lucas Oil Stadium.
        Let us know if you are in the neighborhood - we love meeting customers! If you are interested
        in joining our team, fill out our contact us form and tell us a little about yourself.\n
        App Press\n
        525 S Meridian Street, Suite 3A2\n
        Indianapolis, IN 46225\n
        Phone: +1 866-493-9383\n
        Sales Inquiries: sales@app-press.com\n
        Other Inquiries: info@app-press.com</string>

    <string name="activity_about_history_title">HISTORY</string>
    <string name="activity_about_history_summary">
        We create tools for anyone to design and publish custom mobile apps.
        Over the last couple of years, our team has built our platform using the latest web
        technologies. We are based in Indianapolis and funded by Elevate Venture,
        VisionTech and people that love us.</string>

    <!-- GALLERY -->
    <string name="gallery_item_album">Album</string>
    <string name="gallery_item_all_photos">All Photos</string>
    <string name="gallery_item_moment">Moment</string>
    <string name="gallery_item_favorite">Favorite</string>

    <string name="gallery_folder_name">folder name</string>
    <string name="gallery_photo_num">%d</string>
    <string name="gallery_all_images">All Images</string>

    <!--EDITOR-->
    <string name="editor_name">Editor</string>

    <!--EDITOR TOOLBAR BACK ALL-->
    <string name="editor_revoke">Revoke</string>
    <string name="editor_redo">Redo</string>
    <string name="editor_reduction">Reduction</string>
    <string name="editor_view_modifications">View Modifications</string>

    <!--EDITOR TOOLBAR MATE INFO-->
    <string name="editor_date">Date</string>
    <string name="editor_path">Path</string>
    <string name="editor_type">Type</string>
    <string name="editor_resolution">Resolution</string>
    <string name="editor_shoot_info">Shoot</string>

</resources>
