<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/editorItemBatch"
        android:icon="@drawable/ic_toolbar_add_photo_24"
        android:orderInCategory="100"
        android:title="@string/menu_batch"
        app:showAsAction="always" />

    <item
        android:id="@+id/editorItemBackAll"
        android:icon="@drawable/ic_reply_all_24"
        android:orderInCategory="100"
        android:title="@string/menu_back"
        app:showAsAction="always" />


    <item
        android:id="@+id/editorItemInfo"
        android:icon="@drawable/ic_toolbar_info_24"
        android:orderInCategory="100"
        android:title="@string/menu_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_setting"
        android:orderInCategory="100"
        android:title="@string/menu_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_tutorial"
        android:orderInCategory="100"
        android:title="@string/menu_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_feedback"
        android:orderInCategory="100"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>