<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/batch"
        android:title="@string/menu_batch"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_photo"
        app:showAsAction="always" />

    <item
        android:id="@+id/info"
        android:title="@string/menu_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_setting"
        android:title="@string/menu_setting"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_tutorial"
        android:title= "@string/menu_tutorial"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id = "@+id/item_feedback"
        android:title= "@string/menu_feedback"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_about"
        android:title= "@string/menu_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>